--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -27,10 +27,38 @@ a {
   }
 }
 
+h1,
+h2,
+h3 {
+  margin-top: 0;
+}
+
 section {
   width: 100%;
   height: 100%;
-  text-align: center;
-  padding: 5% 0 0 0;
+  padding: 4em 0 1% 0;
   scroll-snap-align: start;
+  & .wraper-content {
+    height: 97%;
+    text-align: center;
+    background-color: hsl(0, 0%, 15%);
+    border-radius: 15px;
+    margin: 5px auto;
+    padding: 2px;
+  }
+}
+
+@media (width > 1199px) {
+  .wraper-content {
+    max-width: 1200px;
+  }
+}
+
+@media (width < 1199px) {
+  section {
+    & .wraper-content {
+      width: 98%;
+      max-width: none;
+    }
+  }
 }
