--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,11 +1,15 @@
 body {
+  --bg-color: white;
+  --txt-color: black;
+  --bg-content: hsl(0, 0%, 100%);
+  --bg-article: hsla(0, 10%, 100%, 0.9);
   margin: 0;
   padding: 0;
   min-width: 100%;
   min-height: 100%;
   font-size: 16px;
-  background-color: #101010;
-  color: white;
+  background-color: var(--bg-color);
+  color: var(--txt-color);
   overflow: hidden;
 }
 
@@ -38,6 +42,7 @@ body {
   font-size: 16px;
   text-align: center;
   font-weight: 400;
+  color: var(--txt-color);
   padding: 1em;
   cursor: pointer;
   transition: all 0.3s ease 0s;
@@ -45,4 +50,43 @@ body {
 
 .button:active {
   scale: 0.9;
+}
+
+main::-webkit-scrollbar,
+div::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  width: 10px;
+  height: 5px;
+  background-color: hsla(10, 35%, 45%, 0.8);
+}
+
+main::-webkit-scrollbar-thumb,
+div::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  background-color: hsla(255, 55%, 25%, 0.7);
+}
+
+main::-webkit-scrollbar-thumb:hover,
+div::-webkit-scrollbar-thumb:hover,
+body::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(255, 55%, 25%);
+}
+
+main::-webkit-scrollbar-button:vertical:start:decrement,
+div::-webkit-scrollbar-button:vertical:start:decrement,
+body::-webkit-scrollbar-button:vertical:start:decrement {
+  border-bottom: 10px solid rgb(80, 55, 55);
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  background-color: black;
+}
+
+main::-webkit-scrollbar-button:vertical:end:increment,
+div::-webkit-scrollbar-button:vertical:end:increment,
+body::-webkit-scrollbar-button:vertical:end:increment {
+  border-top: 10px solid rgb(36, 34, 34);
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  background-color: black;
 }
