--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,7 +12,7 @@
 
 a {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: var(--txt-color);
   transition: 0.4s;
   padding: 3px;
 }
@@ -27,24 +27,34 @@ a {
   }
 }
 
-h1,
-h2,
-h3 {
-  margin-top: 0;
-}
-
 section {
   width: 100%;
   height: 100%;
   padding: 4em 0 1% 0;
   scroll-snap-align: start;
+  overflow: hidden;
   & .wraper-content {
-    height: 97%;
     text-align: center;
-    background-color: hsl(0, 0%, 15%);
+    position: relative;
+    height: 97%;
+    background-color: var(--bg-content);
     border-radius: 15px;
     margin: 5px auto;
-    padding: 2px;
+    padding: 1em;
+    overflow-x: hidden;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+    border: 1px solid hsla(0, 0%, 45%, 0.5);
+    & .title {
+      font-weight: 700;
+      font-size: 4em;
+      margin: 5px;
+    }
+    & .sub-title {
+      margin: 5px;
+      font-size: 2em;
+      letter-spacing: 4px;
+    }
   }
 }
 
@@ -59,6 +69,20 @@ section {
     & .wraper-content {
       width: 98%;
       max-width: none;
+    }
+  }
+}
+
+@media (width < 946px) {
+  section {
+    & .wraper-content {
+      & .title {
+        font-size: 2em;
+      }
+      & .sub-title {
+        font-size: 1.4em;
+        letter-spacing: 2px;
+      }
     }
   }
 }
